# ChangeLog for net-mail/uw-mailutils
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/uw-mailutils/ChangeLog,v 1.22 2008/09/20 10:02:50 dertobi123 Exp $

  20 Sep 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  uw-mailutils-2007b.ebuild:
  ppc stable, bug #231258

  25 Aug 2008; Raúl Porcel <armin76@gentoo.org> uw-mailutils-2007b.ebuild:
  alpha/ia64 stable wrt #231258

  24 Aug 2008; Markus Rothe <corsair@gentoo.org> uw-mailutils-2007b.ebuild:
  Stable on ppc64; bug #231258

  22 Aug 2008; Jeroen Roovers <jer@gentoo.org> uw-mailutils-2007b.ebuild:
  Stable for HPPA (bug #231258).

  21 Aug 2008; Friedrich Oslage <bluebird@gentoo.org>
  uw-mailutils-2007b.ebuild:
  Stable on sparc, bug #231258

  20 Aug 2008; Markus Meier <maekke@gentoo.org> uw-mailutils-2007b.ebuild:
  amd64/x86 stable, bug #231258

  19 Aug 2008; Christian Hoffmann <hoffie@gentoo.org>
  uw-mailutils-2007b.ebuild:
  moving blocker against old uw-imap versions to RDEPEND as uw-imap should
  not affect building of this package at all (bug 231258 #c17)

*uw-mailutils-2007b (24 Jul 2008)

  24 Jul 2008; Christian Hoffmann <hoffie@gentoo.org>
  +uw-mailutils-2007b.ebuild:
  version bump (bug 153281), thanks to Target <target@targ.dyndns.org> for
  ebuild submission and testing; also fixing quoting and license; thanks to
  dertobi123 for approval for this commit

  02 Aug 2007; Roy Marples <uberlord@gentoo.org> uw-mailutils-2004g.ebuild:
  Fix compile on FreeBSD and add ~x86-fbsd keyword, #104760.

  21 Apr 2007; Raúl Porcel <armin76@gentoo.org> uw-mailutils-2004g.ebuild:
  ia64 stable

  02 Apr 2007; Raúl Porcel <armin76@gentoo.org> uw-mailutils-2004g.ebuild:
  Add ~ia64 keyword wrt bug 170301

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  09 Oct 2005; Andrej Kacian <ticho@gentoo.org> ChangeLog:
  Use pam-less make target. Bug #108529, reported by Henrique Dias