@@ -1,7 +1,7 @@
 AUX uw-mailutils-2004g.patch 1210 RMD160 43fdbc89e422c34a9e72c0c163d8d2bb8653afaf SHA1 8ccdbfeaeccfd05d50b15e46f9e42538fc97c7ac SHA256 4d2369c984ae1fc473feed94e3012e92b4c9dc4ea1d6cddf8a3d983115ff3113
-DIST imap-2004g.tar.Z 2246713 RMD160 a016a06ba073e879d2574a6395ce1074ea74c687 SHA1 791a8bb247ca51ce0a4c32e814a2f736c2bcf066 SHA256 958ab8a6a8b5a1a53167793141fe5bf1fbafc012be1d3f70a21f5f2f493ffa6d
 DIST imap-2007b.tar.Z 2789484 RMD160 8d0e88baa59c0cb78dc546b22a850ded57117c94 SHA1 08b4858334f45ffb198a5d2733be4ef160ddd467 SHA256 b3170bef59f416be1f710be58333f9b0c2c8b0fe137062accd4f5f13a3785cd0
-EBUILD uw-mailutils-2004g.ebuild 1354 RMD160 300100363e5bb96d5c975d2d28c496f74d42e03f SHA1 c511e80cbc896f0e3cfb35afa757cae3e3dc0528 SHA256 176af9fb49f3cc6d3beb83de2c865c8e7a43ea2530a65296e05f5be44899df26
+DIST imap-2007e.tar.Z 2789469 RMD160 7d6af203419975f763d7ec17b6a4544c94490b50 SHA1 24c63cad8d0e74aa76e4341fcfa54d24f23a8c70 SHA256 be648d0e1aa62d564d9dbe04b77ea948116ee96ed687cb5d169c99ae28286e59
 EBUILD uw-mailutils-2007b.ebuild 1392 RMD160 d38da67b165f083434ff5c8c57ddc46c02d2cd43 SHA1 52b2c398aca3e8309e314e719c67c28b5aee6b47 SHA256 d5653b837ebf089dea85870fd22a94c45a91211fb1ecfd0fd1048a5607b8b508
-MISC ChangeLog 3230 RMD160 3bbf03753537d6d651c35207556d6febafeb6706 SHA1 76d8cd12e9026e22597987e4f50406aa78f2789d SHA256 4ea2d75268f8cad2b695c57c7abcf2e565a9ef8b7560b146a975453688268fcb
+EBUILD uw-mailutils-2007e.ebuild 1392 RMD160 a19978ea4203bf05c64f5fbd3cc01d9681890b34 SHA1 be20184305bed4472670c4e9deb4c0eda6a0d7bd SHA256 9a32793b574883f45f4e32886644d5658a8ca8a3e9a5a4f3a3a9651971eaca8f
+MISC ChangeLog 3404 RMD160 964ff13ff91c92f7e8345d480e7461753c0b2d60 SHA1 cf844c62707d96799d57765aa63932b19010f1b1 SHA256 028d76d556173b560b8bf2123baed03178299527dd337c44ad07e79afea3822f
 MISC metadata.xml 272 RMD160 7c8df1c612701081856595fd1df8a1cf08245b98 SHA1 a0acd634bdbf0bf997fb9eb25bdafa8d684c997d SHA256 9abc9ed0695bca81616f283383dac21ac7fd207d35f558ddfc247a2cb6ef01b5
