@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/uw-mailutils
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/uw-mailutils/ChangeLog,v 1.22 2008/09/20 10:02:50 dertobi123 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-mail/uw-mailutils/ChangeLog,v 1.23 2009/01/13 17:44:34 dertobi123 Exp $
+
+*uw-mailutils-2007e (13 Jan 2009)
+
+  13 Jan 2009; Tobias Scherbaum <dertobi123@gentoo.org>
+  -uw-mailutils-2004g.ebuild, +uw-mailutils-2007e.ebuild:
+  Version bump, #245425
 
   20 Sep 2008; Tobias Scherbaum <dertobi123@gentoo.org>
   uw-mailutils-2007b.ebuild:
